Add other recipes to homepage and recipe folder

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -28,7 +28,7 @@
         <li>Cook the noodles</li>
         <li>Make the ricotta mixture</li>
         <li>Layer the Lasagna</li>
-            <ol><strong> Steps to layer </strong>
+            <ol><strong> Steps to layer:</strong>
                 <li>Meat Sauce</li>
                 <li>Noodles</li>
                 <li>Ricotta mixture</li>
