--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/chicken-katsu.html">Chicken Katsu Curry</a></li>
+        <li><a href="./recipes/stir-fry.html">Chicken Stir Fry</a></li>
+    </ul>
 </body>
 </html>
