Fill out chicken-katsu page

--- a/recipes/chicken-katsu.html
+++ b/recipes/chicken-katsu.html
@@ -8,5 +8,28 @@
 <body>
     <h1>Chicken Katsu Curry</h1>
     <a href="../index.html">Homepage</a>
+    <h2>Description</h2>
+    <p>Delicous Japanese dish comprised of fried, flattened chicken, Japanese curry, and rice</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Cooked rice</li>
+        <li>House vermont curry</li>
+        <li>Onion</li>
+        <li>Potato</li>
+        <li>Carrot</li>
+        <li>Chicken Cutlet</li>
+        <li>Fukujinzuke as condiment</li>
+    </ul>
+    <h2>Steps to make</h2>
+    <ol>
+        <li>Put oil into a pot and sauté onion pieces until the edges start browning</li>
+        <li>Add potato and carrot pieces to the pot and stir.</li>
+        <li>Add water and bring it to a boil. Remove scum as it rises.</li>
+        <li>Add curry roux and cook.</li>
+        <li>Cook chicken cutlets and slice them.</li>
+        <li>Put cooked rice on one side of a serving plate, place cutlet pieces next to the rice.</li>
+        <li>Pour curry on the side next to the cutlet away from the rice.</li>
+        <li>Place a small amount of fukujinzuke on the plate.</li>
+    </ol>
 </body>
 </html>
