--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -22,7 +22,7 @@
         <li>Cheeses</li>
         <li>Egg</li>
     </ul>
-    <h2>Step to make:</h2>
+    <h2>Steps to make:</h2>
     <ol>
         <li>Make the meat sauce</li>
         <li>Cook the noodles</li>
