Fill content for stir-fry page

--- a/recipes/stir-fry.html
+++ b/recipes/stir-fry.html
@@ -9,6 +9,32 @@
     <h1>Chicken Stir Fry</h1>
     <a href="../index.html">Homepage</a>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F2a09b589ed51d101ab1cafe183fe946f%2F167004599362520221127-ChickenStirFry.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Delicious Stir Fry">
-
+    <h2>Description</h2>
+    <p>Quick, easy, and cheap meal to make for college students or beginner cooks</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>4 cups of water</li>
+        <li>2 cups of white rice</li>
+        <li>2/3 cup of soy sauce</li>
+        <li>1/4 cup brown sugar</li>
+        <li>1 tablespoon cornstarch</li>
+        <li>1 tablespoon minced garlic</li>
+        <li>1/4 teaspoon red pepper flakes</li>
+        <li>3 skinless chicken breasts</li>
+        <li>2 tablespoons sesame oil</li>
+        <li>1 head brocolli</li>
+        <li>1 onion</li>
+        <li>1 cup sliced carrots</li>
+        <li>1 (8 ounce) can of water chestnuts</li>
+        <li>1 green bell pepper</li>
+    </ul>
+    <h2>Steps to make:</h2>
+    <ol>
+        <li>Stir the soy sauce, sugar, cornstarch, and spices together.</li>
+        <li>Add the chicken and toss. Cover and marinate.</li>
+        <li>Cook the vegetables and water chestnuts in sesame oil.</li>
+        <li>Cook the marinated chicken, then stir in the veggies and reserved marinade.</li>
+        <li>Boil until the chicken is fully cooked. Serve over rice. </li>
+    </ol>
 </body>
 </html>
