--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/chicken-katsu.html">Chicken Katsu Curry</a></li>
-        <li><a href="./recipes/stir-fry.html">Chicken Stir Fry</a></li>
+        <li><a href="./recipes/stir-fry.html">Stir Fry</a></li>
     </ul>
 </body>
 </html>
