--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Lasagna</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
     <a href="../index.html">Homepage</a>
+    <h1><span>Lasagna</span></h1>
     <img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg" alt="Yummy lasagna">
     <h2>Description</h2>
     <p>This is a lovely, meat lovers lasagna that can satisfy the whole family</p>
