--- a/recipes/stir-fry.html
+++ b/recipes/stir-fry.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Chicken Stir Fry</title>
 </head>
 <body>
-    <h1>Chicken Stir Fry</h1>
     <a href="../index.html">Homepage</a>
+    <h1><span>Chicken Stir Fry</span></h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F2a09b589ed51d101ab1cafe183fe946f%2F167004599362520221127-ChickenStirFry.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Delicious Stir Fry">
     <h2>Description</h2>
     <p>Quick, easy, and cheap meal to make for college students or beginner cooks</p>
